--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Http;
 ﻿@using System.Text.RegularExpressions;
 @{
-    ViewData["Title"] = $"System_Auswählen/{Model.userKey}";
+    ViewData["Title"] = $"System_Auswählen/{@Model.userKey}";
 }
 
     <div>
@@ -20,8 +20,9 @@
 
         <div id="ExelMenu">
     <form asp-action="System_Auswählen" method="post" enctype="multipart/form-data" asp-controller="Konfigurator">
-        @Html.HiddenFor(m => m.userKey)
        
+        @Html.HiddenFor(m => m.userKey)
+
         @if (ViewBag.Doppel != null && ViewBag.Knaufzylinder == null && ViewBag.Halb == null && ViewBag.Hebel == null && ViewBag.VorhanSchloss == null && ViewBag.Aussen == null)
         {
             foreach (var item in ViewBag.Doppel)
@@ -49,7 +50,7 @@
                         </div>
                         <div id="productChek">
 
-                           <a class="btn btn-danger" id="chekProduct" name="DopelId" href=" @Url.Action("OrdersKey", "Konfigurator", new { DopelId = item.Id , param2 = item.userKey})">WÄHLEN</a>
+                            <a class="btn btn-danger" id="chekProduct" name="DopelId" href=" @Url.Action("OrdersKey", "Konfigurator", new { DopelId = item.Id , param2 = item.userKey,userInfo = @ViewBag.UserNameItem})">WÄHLEN</a>
 
                         </div>
                     </div>
@@ -301,7 +302,7 @@
                         </div>
                         <div id="productChek">
 
-                            <a class="btn btn-danger" id="chekProduct" name="DopelId" href=" @Url.Action("OrdersKey", "Konfigurator", new { DopelId = item.Id , param2 = item.userKey,KnayfID = item?.cheked2})">WÄHLEN</a>
+                            <a class="btn btn-danger" id="chekProduct" name="DopelId" href=" @Url.Action("OrdersKey", "Konfigurator", new { DopelId = item.Id , param2 = item.userKey,KnayfID = item?.cheked2,userInfo = @ViewBag.User})">WÄHLEN</a>
 
                         </div>
                     </div>
@@ -338,7 +339,7 @@
                         </div>
                         <div id="productChek">
 
-                            <a class="btn btn-danger" id="chekProduct" name="DopelId" href=" @Url.Action("OrdersKey", "Konfigurator", new { DopelId = item?.Id , param2 = item.userKey,KnayfID = item?.cheked2, Halb = item?.cheked3,Hebel = item?.cheked4,Vorhan = item?.cheked5,Aussen= item?.cheked6})">WÄHLEN</a>
+                            <a class="btn btn-danger" id="chekProduct" name="DopelId" href=" @Url.Action("OrdersKey", "Konfigurator", new { DopelId = item?.Id , param2 = item.userKey,KnayfID = item?.cheked2, Halb = item?.cheked3,Hebel = item?.cheked4,Vorhan = item?.cheked5,Aussen= item?.cheked6,userInfo = @ViewBag.User})">WÄHLEN</a>
 
                         </div>
                     </div>
