--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_ModalShop.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/_ModalShop.cshtml
@@ -35,13 +35,18 @@
         <label>Login</label>
             <input class="form-control" type="text" name="Login" />
             <label>Password</label>
-            <input class="form-control" type="text" name="Password" />
+            <input class="form-control" type="password" name="Password" />
             <input class="btn btn-success" type="submit"  value="Eintrag" />
    </div>
    </form>
 </div>
-<script>
+@section scripts {
 
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
+<script>
+  
     let login = document.getElementById("login");
     let registrations = document.getElementById("registration");
     let registrationsForm = document.getElementById("registrationForm");
