--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
@@ -660,8 +660,15 @@ summary {
 }
 a{
     text-decoration:none;
-   /* color:black;*/
+    color:black;
 }
     a:hover {
         color: black;
     }
+
+#AllProductUser {
+    margin-top: 50px;
+    background: white;
+    padding: 40px;
+    border-radius: 10px;
+}
